[package]
name = "saltnitor"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.0"
regex = "1.12.3"
reqwest = { version = "0.13.3", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.39.0"
tokio = { version = "1.52.3", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
toml = "1.1.2"

# --- added for the headless control API (control_api.rs) ---
axum = "0.8"            # default features include json + tokio + query (all needed)
tokio-stream = "0.1"    # ReceiverStream + StreamExt for the /v1/ensure/stream SSE body
